amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.

 
  ADD: much improved gstreamer engine, now working with visualizations
  CHG: GstEngine requires gstreamer-0.8 
  FIX: Show move pointer instead of hand when moving preview OSD.
  ADD: sorting by artist subsorts by album and track, sorting by album subsorts
       by track, enjoy!
  ADD: browserTabs float over the playlist when in set to not overlap
  FIX: communication loader<-->amarok failing on FreeBSD
  FIX: loader forgetting to close socket descriptors
  FIX: FileBrowser remembers that state of its view between sessions
  CHG: converted engines to plugins. they are now dynamically loaded at runtime
  ADD: plugin framework
  CHG: made amaroK aRts-independent. with the --without-arts configure switch
       it's possible to build the app without aRts support, using only NMM or GST
  ADD: Shift drag appends items to the end of the playlist.
  FIX: startup notification icon staying on screen when amaroK started by loader
  FIX: amaroK showing the "X" icon instead of the correct one

VERSION 0.9:
  CHG: playlistBrowser removed until next release
  FIX: playerWidget font is now configurable, you need to start new track for the
       scrolling marquee to get updated. Default font is used by default.
  FIX: fixed several stability issues concerning stream-playback
  ADD: whatsthis for all configurable options.
  FIX: amaroK registering with dcop as "amarok-PID". it's back to just "amarok" now.
  FIX: OSD not updating correctly when changing volume

VERSION 0.9-beta3:
  ADD: "Show Current Track" button in playlist.
  ADD: Volume OSD when changing with mousewheel over trayicon.
  CHG: software volume mixer uses a logarithmic function to make the scale more natural
  ADD: Global shortcuts to display OSD and increase/decrease volume.
       (Win+o and Win+KP_Add/KP_Subtract by default, respectively)
  ADD: DCOP calls to control OSD and playback volume