@@ -2,7 +2,8 @@ amaroK ChangeLog
 ================
 (c) 2002-2004 the amaroK authors.
 
- 
+  ADD: Play Next can now handle several songs through a queue. The queue can be
+       manipulated by using the context menu or by CTRL+right clicking. 
   ADD: much improved gstreamer engine, now working with visualizations
   CHG: GstEngine requires gstreamer-0.8 
   FIX: Show move pointer instead of hand when moving preview OSD.
